# 2510youtuber

./: .gitignore  AGENTS.md  BUGFIX_STATUS.md  CLAUDE.md  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt  test.py  test_direct_ffmpeg.sh  test_ffmpeg_fix.py  verify.py
.github/workflows/: backup-execution.yml  deploy.yml
.serena/: .gitignore  project.yml
.serena/memories/: architecture_overview.md  code_style_and_conventions.md  codebase_structure.md  important_patterns_and_gotchas.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
app/: __init__.py  align_subtitles.py  analytics.py  api_rotation.py  background_theme.py  config.py  container.py  discord.py  drive.py  japanese_quality.py  llm_logging.py  logging_config.py  main.py  metadata.py  metadata_storage.py  prompt_cache.py  script_gen.py  script_quality.py  script_templates.py  search_news.py  sheets.py  stt.py  stt_fallback.py  thumbnail.py  thumbnail_pro.py  tts.py  tts_fallback.py  utils.py  verify.py  video.py  video_feedback.py  web.py  workflow_runner.py  workflow_runtime.py  youtube.py
app/adapters/: __init__.py  llm.py  search.py
app/analytics/: __init__.py
app/config/: __init__.py  paths.py  settings.py
app/config_prompts/: __init__.py  settings.py
app/constants/: __init__.py  prompts.py
app/content/: __init__.py  prompt_cache.py  script_quality.py
app/core/: __init__.py  container.py  logging_config.py  verify.py
app/crew/: __init__.py  agent_review.py  agents.py  flows.py  tasks.py
app/integrations/: __init__.py  drive.py  metadata.py  metadata_storage.py  sheets.py  web.py
app/media/: __init__.py  align_subtitles.py  background_theme.py  stt.py  stt_fallback.py  thumbnail.py  video.py  video_feedback.py
data/: metadata_history.csv
docs/: .gitignore  API_FACT_SHEET_AND_MANAGEMENT_POLICY.md  API_MANAGEMENT.md  API_REFERENCE.md  ARCHITECTURE.md  DATA_MANAGEMENT.md  DETAILED_DESIGN_SPEC_JA.md  FEATURES.md  GEMINI_END_TO_END_FLOW.md  GUI_DESIGN.md  GUI_SETUP.md  JAPANESE_MASTER_GUIDE.md  JA_OPERATIONS_GUIDE.md  LLM_OUTPUT_DISCIPLINE.md  README.md  README_CREWAI.md  SETUP.md  TECHNICAL_REPORT_JA.md  TROUBLESHOOTING.md  USER_MANUAL_JA.md  VIDEO_GENERATOR_ERROR_ROOT_CAUSES_JA.md  VOICEVOX.md  VOICEVOX_NEMO.md  VOICEVOX_SETUP.md  agent_requirement_review.md  code_review.md  setup.md  マニュアル.md  技術報告書.md  詳細設計仕様書.md
scripts/: analytics_report.py  analyze_logs.py  check_main_execution.py  continuous_improvement.py  mock_ffmpeg.py  render.yaml  run_continuous_improvement.sh  run_daily.sh  sync_tauri_configs.py  tasks.py  video_review.py  voicevox_manager.sh
systemd/: .gitignore
tauri-app/: .gitignore  package-lock.json  package.json  package.yaml  svelte.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.yaml  tsconfig.yaml
tests/: README.md  conftest.py  test_api_configuration_validation.py  test_api_stability.py  test_crewai_basic.py  test_crewai_flow.py  test_e2e_script_generation.py  test_elevenlabs_quota_handling.py  test_gemini_rate_limits.py  test_google_sheets_integration.py  test_japanese_quality_integration.py  test_phase1a.py  test_pixabay.py  test_script_generation_errors.py  test_script_parse.py  test_stock_footage.py  test_stock_video_generation.py  test_voicevox_server_integration.py  test_youtube_uploads.py
(+152 files in other folders)
