[project]
name = "youtuber"
version = "0.1.0"
dependencies = [
    "anthropic",
    "google-generativeai",
    "elevenlabs",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "gspread",
    "httpx",
    "requests",
    "pydub",
    "ffmpeg-python",
    "Pillow",
    "python-slugify",
    "rapidfuzz",
    "pandas",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "psutil",
    "gunicorn",
    "flask",
    "SpeechRecognition",
    "pyttsx3",
    "openai-whisper",
    "gtts",
    "coqui-tts",
    "openai",
]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "E722"]

[tool.ruff.lint.per-file-ignores]
"app/crew/tools/ai_clients.py" = ["F811"]  # List再定義を無視

[tool.ruff.lint.isort]
known-first-party = ["app"]
