[project]
name = "youtuber"
version = "0.1.0"
dependencies = [
    "anthropic",
    "google-generativeai",
    "elevenlabs",
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "gspread",
    "httpx",
    "requests",
    "pydub",
    "ffmpeg-python",
    "imageio-ffmpeg",
    "Pillow",
    "python-slugify",
    "rapidfuzz",
    "pandas",
    "python-dotenv",
    "pytest",
    "pytest-asyncio",
    "ruff",
    "psutil",
    "gunicorn",
    "flask",
    "fastapi",
    "uvicorn",
    "sqlmodel",
    "SpeechRecognition",
    "pyttsx3",
    "openai-whisper",
    "gtts",
    "coqui-tts",
    "openai",
    "PyYAML",
    "litellm",
    "crewai",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402", "W191"]

[tool.ruff.lint.isort]
known-first-party = ["app"]